--- a/client/public_html/index.html
+++ b/client/public_html/index.html
@@ -49,10 +49,12 @@
         <script src="bower_components/angular-resource/angular-resource.js"></script>
         <script src="bower_components/jquery/dist/jquery.js"></script>
         <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+        <!-- build:js js/built.js -->
         <script src="js/app.js"></script>
         <script src="js/services.js"></script>
         <script src="js/controllers.js"></script>
         <script src="js/filters.js"></script>
         <script src="js/directives.js"></script>
+        <!-- endbuild -->
     </body>
 </html>
