--- a/client/public_html/index.html
+++ b/client/public_html/index.html
@@ -4,15 +4,17 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>The Affable Bean</title>
-        <link rel="stylesheet" href="css/app.css"/>
-        <link rel="stylesheet" href="css/bootstrap.css"/>
         <style type="text/css">
             body {
                 padding-top: 60px;
                 padding-bottom: 40px;
             }
         </style>
+        <!-- build:css css/output.css -->
+        <link rel="stylesheet" href="css/app.css"/>
+        <link rel="stylesheet" href="css/bootstrap.css"/>
         <link href="css/bootstrap-responsive.css" rel="stylesheet">
+        <!-- endbuild -->
     </head>
     <body>
 
